--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage":"https://github.com/mauriciocartagena/my-profile",
   "name": "PlatziVideo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development"
@@ -34,6 +37,7 @@
   "devDependencies": {
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
+    "gh-pages": "^2.2.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
